@@ -1,3 +1,10 @@
+1999-06-13  Ian Lance Taylor  <ian@zembu.com>
+
+	* cg_dfn.c: Include "libiberty.h"
+	(DFN_INCR_DEPTH): Define instead of DFN_DEPTH.
+	(dfn_stack): Define as pointer rather than array.
+	(pre_visit): Reallocate dfn_stack as needed.
+
 1999-04-26  Tom Tromey  <tromey@cygnus.com>
 
 	* aclocal.m4, configure: Updated for new version of libtool.
